--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -4,7 +4,11 @@
   <article class="fullheight" style="height: 568px;">
     <div class="hgroup">
       <h1>Landon Hotel</h1>
-      <h2>London, Ontario</h2>
+      <h2 style="margin-bottom: 10px;">London, Ontario</h2>
+      <h3 *ngFor="let msg of welcomeMessages" style="color: white;text-align: center;">
+        {{msg}}
+      </h3>
+
       <p><a href="/#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
     </div>
   </article>
@@ -23,7 +27,7 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
+
 
       <div class="row">
         <div class=""col-12>
@@ -58,7 +62,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
