--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -1,5 +1,4 @@
 
-
 <header id="intro" style="display: block;">
   <article class="fullheight" style="height: 568px;">
     <div class="hgroup">
@@ -8,12 +7,11 @@
       <h3 *ngFor="let msg of welcomeMessages" style="color: white;text-align: center;">
         {{msg}}
       </h3>
-
       <p><a href="/#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
     </div>
   </article>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <div class="scrollmagic-pin-spacer"
        style="display: block; top: auto; left: auto; bottom: auto; right: auto; position: relative; margin: 0 auto auto; box-sizing: content-box; width: 100%; min-height: 44px; height: auto; padding-top: 0; padding-bottom: 0;">
     <nav id="nav" style="position: relative; top: 0; left: 0; bottom: auto; right: auto; width: 100%;">
@@ -25,10 +23,15 @@
 </header>
 <main id="wrapper">
   <div class="scene" id="welcome">
-    <article class="content">
-
-
-
+  <article class="content">
+    <div class="row">
+        <div class="col-12" *ngIf="presentationTimes && presentationTimes.length >= 3">
+          <p> Join us for an online live presentation held at the Landon Hotel at </p>
+          <p> Eastern: {{presentationTimes[0]}}</p>
+          <p> Mountain: {{presentationTimes[1]}}</p>
+          <p> Universal Time: {{presentationTimes[2]}}</p>
+        </div>
+      </div>
       <div class="row">
         <div class=""col-12>
           <div class="gallery">
